[package]
name = "pitchlake-pricing"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
linfa = "0.7.0"
linfa-linear = "0.7.0"
ndarray = "0.15"
ndarray-linalg = { version = "0.16", features = ["openblas-system"] }
polars = { version = "0.41.3", features = ["lazy", "dynamic_group_by", "rolling_window", "ndarray"] }
polars-core = "0.41.3"
polars-io = "0.41.3"
statrs = "0.16"


argmin = "0.10.0"
argmin-math = { version = "0.4", features = ["ndarray_latest", "nalgebra_latest"] }
argmin-observer-slog = "0.1.0"
argmin_testfunctions = "0.2.0"
optimization = "0.2.0"
